--- a/app.html
+++ b/app.html
@@ -43,7 +43,7 @@
             <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="#">About</a>
+            <a class="nav-link" target="_blank" href="https://charliekaylor.com">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -56,13 +56,14 @@
       <div class="row row-cols-1 row-cols-lg-2">
         <div class="col col-lg-4 border-end border-2">
           <h1>0 TO 100: A Coding Project</h1>
-          <h4 class="lead">
+          <h4 class="lead text-secondary">
             Live life one loop at a time. A javascript coding excercise using
             loops. Write a program that displays the numbers from 0 to 100.
             Display the even numbers in <strong>BOLD.</strong>
           </h4>
           <h2 class="mt-5 border-bottom border-2">Instructions</h2>
-          <p>Enter a starting value and an ending value. Press the button and the values will appear.</p>
+          <p class="text-secondary">Enter a starting value and an ending value. Press the button and the values will
+            appear.</p>
         </div>
         <div class="col col-lg-8">
           <div>
@@ -77,7 +78,7 @@
                   aria-label="End Value">
               </div>
               <div class="col-12 d-flex justify-content-end">
-                <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display The Numbers</button>
+                <button type="button" id="btnSubmit" class="btn btn-outline-dark fw-bolder">Display The Numbers</button>
               </div>
             </form>
             <h2 class="mt-5 border-bottom border-2">Results</h2>
@@ -97,33 +98,36 @@
 
   <!-- Footer Section -->
   <footer class="footer mt-auto py-1">
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-lg-3 gy-2">
+    <div class="container-fluid text-center">
+      <div class="row d-flex justify-content-md-between text-center g-2">
         <div class="
-              col
-              order-last order-lg-first
+              col-md-4
+              order-last order-md-first
               text-light
               d-flex
               align-items-center
+              justify-content-center
+              justify-content-md-start
             ">
           <div>
             <span class="text-muted">&copy;2022</span> Charlie Kaylor |
-            charliekaylor@hotmail.com
+            <a target="_blank" class="text-decoration-none text-white"
+              href="https://charliekaylor.com">charliekaylor.com</a>
           </div>
         </div>
         <div class="
-              col
+              col-md-4
               d-flex
               align-items-center
-              justify-content-start justify-content-lg-center
+              justify-content-center
             ">
           <img src="img/White logo - no background.svg" alt="Charlie Kaylor Logo" height="59" />
         </div>
         <div class="
-              col
+              col-md-4
               d-flex
               align-items-center
-              justify-content-start justify-content-lg-end
+              justify-content-center justify-content-md-end
             ">
           <div class="row">
             <div class="col social">
