--- a/code.html
+++ b/code.html
@@ -46,7 +46,7 @@
             <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="#">About</a>
+            <a class="nav-link" target="_blank" href="https://charliekaylor.com">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -123,9 +123,10 @@ function displayNumbers(numbers) {
             </code></pre>
         </div>
         <div class="col-lg-4">
-          <p>The code is structured in three functions to keep everything nice and readable. No spaghetti code!</p>
+          <p class="text-secondary">The code is structured in three functions to keep everything nice and readable. No
+            spaghetti code!</p>
           <h5>Get Values</h5>
-          <p>
+          <p class="text-secondary">
             The first function is a controller/starter function. I first get the initial values from the users inputs in
             the document/HTML (button event listener seperated into the document/HTML), then parse text types that may
             not be integers (the zero was initially showing as text/string) and check if that was successful using an if
@@ -133,13 +134,15 @@ function displayNumbers(numbers) {
             displayNumbers function, else an alert is shown to the user.
           </p>
           <h5>Generate Numbers</h5>
-          <p>The second function generates the values from start to end using the inputted values by the user. It does
+          <p class="text-secondary">The second function generates the values from start to end using the inputted
+            values by the user. It does
             this by retrieving parameters from the numbers variable defined in the getValues function above it (start
             and end value). I then execute a for loop to get all the numbers from start to end and push them to the
             numbers array - not to be confused with the numbers variable in getValues(these are different due to block
             scoping). I then return the numbers to give getValues access to the newly created numbers array.</p>
           <h5>Display Numbers</h5>
-          <p>The final function is used to display and mark the even numbers bold. It is called from the getValues
+          <p class="text-secondary">The final function is used to display and mark the even numbers bold. It is called
+            from the getValues
             function and given the numbers array (retrieved from generateNumbers orignally) as a parameter, using this
             to loop through the length of the array with another for loop. The index (each individual integer in the
             array) is then added to the document/HTML, adding to the document/HTML using innerHTML and a template
@@ -153,34 +156,37 @@ function displayNumbers(numbers) {
 
   <!-- Footer Section -->
   <footer class="footer mt-auto py-1">
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-lg-3 gy-2">
+    <div class="container-fluid text-center">
+      <div class="row d-flex justify-content-md-between text-center g-2">
         <div class="
-              col
-              order-last order-lg-first
-              text-light
-              d-flex
-              align-items-center
-            ">
+            col-md-4
+            order-last order-md-first
+            text-light
+            d-flex
+            align-items-center
+            justify-content-center
+            justify-content-md-start
+          ">
           <div>
             <span class="text-muted">&copy;2022</span> Charlie Kaylor |
-            charliekaylor@hotmail.com
+            <a target="_blank" class="text-decoration-none text-white"
+              href="https://charliekaylor.com">charliekaylor.com</a>
           </div>
         </div>
         <div class="
-              col
-              d-flex
-              align-items-center
-              justify-content-start justify-content-lg-center
-            ">
+            col-md-4
+            d-flex
+            align-items-center
+            justify-content-center
+          ">
           <img src="img/White logo - no background.svg" alt="Charlie Kaylor Logo" height="59" />
         </div>
         <div class="
-              col
-              d-flex
-              align-items-center
-              justify-content-start justify-content-lg-end
-            ">
+            col-md-4
+            d-flex
+            align-items-center
+            justify-content-center justify-content-md-end
+          ">
           <div class="row">
             <div class="col social">
               <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"><i
