--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="#">About</a>
+            <a class="nav-link" target="_blank" href="https://charliekaylor.com">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -65,43 +65,43 @@
           <h1 class="display-5 fw-bold lh-1 mb-3">
             0 TO 100: A Coding Project
           </h1>
-          <h4 class="lead">
+          <h4 class="lead text-secondary">
             Live life one loop at a time. A javascript coding excercise using
             loops. Write a program that displays the numbers from 0 to 100.
             Display the even numbers in <strong>BOLD.</strong>
           </h4>
           <ul class="fa-ul pt-2 checklist">
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               CSS and Bootstrap Layout
             </li>
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               Javascript Fundamentals
             </li>
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               Javascript Loops
             </li>
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               Javascript Functions
             </li>
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               Javascript Dom Manipulation
             </li>
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               Javascript If/Then/Else
             </li>
-            <li>
+            <li class="text-secondary">
               <span class="fa-li"><i class="fas fa-check-square"></i></span>
               Javascript Boolean Logic
             </li>
           </ul>
           <div>
-            <a href="app.html" type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2">Try It Out</a>
+            <a href="app.html" type="button" class="btn btn-outline-dark fw-bolder px-4 me-md-2">Try It Out</a>
           </div>
           <h5 class="fw-bold mt-4">
             <div class="d-flex">
@@ -132,33 +132,36 @@
 
   <!-- Footer Section -->
   <footer class="footer mt-auto py-1">
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-lg-3 gy-2">
+    <div class="container-fluid text-center">
+      <div class="row d-flex justify-content-md-between text-center g-2">
         <div class="
-              col
-              order-last order-lg-first
+              col-md-4
+              order-last order-md-first
               text-light
               d-flex
               align-items-center
+              justify-content-center
+              justify-content-md-start
             ">
           <div>
             <span class="text-muted">&copy;2022</span> Charlie Kaylor |
-            charliekaylor@hotmail.com
+            <a target="_blank" class="text-decoration-none text-white"
+              href="https://charliekaylor.com">charliekaylor.com</a>
           </div>
         </div>
         <div class="
-              col
+              col-md-4
               d-flex
               align-items-center
-              justify-content-start justify-content-lg-center
+              justify-content-center
             ">
           <img src="img/White logo - no background.svg" alt="Charlie Kaylor Logo" height="59" />
         </div>
         <div class="
-              col
+              col-md-4
               d-flex
               align-items-center
-              justify-content-start justify-content-lg-end
+              justify-content-center justify-content-md-end
             ">
           <div class="row">
             <div class="col social">
